# ToyRT2018

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
include/accel/: embreewrapper.hpp
include/camera/: camera.hpp  pinholecamera.hpp
include/common/: common.hpp
include/emitters/: arealight.hpp  emitter.hpp  envmap.hpp
include/film/: film.hpp
include/hitables/: Sphere.h  hitable.hpp  plane.hpp  sphere.hpp  triangle.hpp  trianglemesh.hpp
include/integrators/: integrator.hpp  pt.hpp  ptBSDFv3.hpp  ptEmitterv4.hpp  ptemitter.hpp  ptemitterv2.hpp  ptemitterv3.hpp  ptv4.hpp  toyIntegrator.hpp
include/materials/: blinnphong.hpp  lambertCosine.hpp  lambertUniform.hpp  material.hpp  phong.hpp  transparentMaterial.hpp
include/objects/: object.hpp
include/path/: path.hpp  pathsampler.hpp
include/scene/: scene.hpp
include/util/: pfmutils.hpp  rng.hpp  sampler.hpp
scenes/: testPlaneScene.json  testSphereCboxScene.json
src/: main.cpp
